# labby

./: .dockerignore  .env.example  .gitattributes  .gitguardian.yaml  .gitignore  .gitleaksignore  .mise.toml  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  deny.toml  docker-compose.prod.yml  docker-compose.yml  manifest  package-lock.json  package.json
crates/lab/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/lab-apis/: CLAUDE.md  Cargo.toml  README.md
crates/lab-apis/src/: acp_registry.rs  beads.rs  core.rs  dozzle.rs  lib.rs  mcpregistry.rs  qdrant.rs  setup.rs  stash.rs  tei.rs
crates/lab-apis/src/acp/: types.rs
crates/lab-apis/src/acp_registry/: client.rs  installer.rs  ssrf.rs
crates/lab-apis/src/beads/: client.rs  error.rs  types.rs
crates/lab-apis/src/bytestash/: client.rs
crates/lab-apis/src/core/: action.rs  plugin.rs  ssh.rs
crates/lab-apis/src/mcpregistry/: client.rs  types.rs
crates/lab-apis/src/qdrant/: client.rs  error.rs  types.rs
crates/lab-apis/src/setup/: client.rs  types.rs
crates/lab-apis/src/stash/: types.rs
crates/lab-apis/src/tei/: client.rs  error.rs
crates/lab-apis/tests/: beads_client.rs  bytestash_client.rs
crates/lab-auth/: Cargo.toml
crates/lab-auth/src/: at_rest.rs  authorize.rs  config.rs  jwt.rs  lib.rs  metadata.rs  middleware.rs  routes.rs  session.rs  sqlite.rs  state.rs  token.rs  upstream.rs
crates/lab-auth/src/upstream/: cache.rs  manager.rs  refresh.rs  runtime.rs
crates/lab-codemode/: Cargo.toml
crates/lab-codemode/src/: artifacts.rs  execute.rs  host.rs  lib.rs  pool.rs  runner.rs  runner_drive.rs  snippet.rs  tests_ids_schema.rs  tests_ts_signatures.rs  trace.rs  ts_signatures.rs  types.rs  util.rs  wrapper.rs
crates/lab-codemode/src/pool/: job_guard.rs  runner_handle.rs
crates/lab-gateway/: Cargo.toml
crates/lab-gateway/src/: gateway.rs  lib.rs  process.rs  registry.rs  security.rs  upstream.rs
crates/lab-gateway/src/gateway/: code_mode.rs  config.rs  config_store.rs  dispatch.rs  dispatch_tests.rs  manager.rs  oauth.rs  oauth_lifecycle.rs  params.rs  projection.rs  runtime.rs  service_catalog.rs  shared.rs
crates/lab-gateway/src/process/: unix.rs
crates/lab-gateway/src/security/: ssrf.rs
crates/lab-gateway/src/upstream/: CLAUDE.md  auth.rs  http_client.rs  pool.rs  spawn_guard.rs  types.rs
crates/lab-runtime/: Cargo.toml
crates/lab-runtime/src/: dispatch_helpers.rs  error.rs  gateway_config.rs  helpers.rs  lib.rs  path_safety.rs  redact.rs
crates/lab/src/: acp.rs  api.rs  cli.rs  config.rs  dispatch.rs  lib.rs  log_fmt.rs  main.rs  mcp.rs  process.rs  registry.rs  workspace.rs
crates/lab/src/acp/: params.rs  providers.rs  registry.rs  runtime.rs  sqlite_persistence.rs  types.rs
crates/lab/src/api/: browser_session.rs  error.rs  health.rs  host_validation.rs  oauth.rs  openapi.rs  router.rs  services.rs  state.rs  upstream_oauth.rs  web.rs
crates/lab/src/cli/: doctor.rs  extract.rs  gateway.rs  health.rs  help.rs  helpers.rs  logs.rs  marketplace.rs  mcpregistry.rs  oauth.rs  serve.rs  setup.rs  snippets.rs  style.rs
crates/lab/src/config/: env_merge.rs
crates/lab/src/dispatch/: CLAUDE.md  clients.rs  doctor.rs  error.rs  extract.rs  fs_atomic.rs  gateway.rs  helpers.rs  logs.rs  marketplace.rs  path_safety.rs  redact.rs  security.rs  setup.rs  snippets.rs  upstream.rs
crates/lab/src/docs/: artifacts.rs  projection.rs  render.rs  routes.rs  types.rs
crates/lab/src/mcp/: CLAUDE.md  call_tool.rs  call_tool_codemode.rs  call_tool_upstream.rs  catalog.rs  completion.rs  context.rs  envelope.rs  error.rs  handlers_prompts.rs  handlers_resources.rs  handlers_tools.rs  in_process_peer.rs  peers.rs  prompts.rs  resource_proxy.rs  result_format.rs  server.rs  upstream.rs
crates/lab/src/node/: health.rs  identity.rs  install.rs  log_store.rs  master_client.rs  runtime.rs  update.rs  ws_client.rs
crates/lab/src/oauth/: local_relay.rs  upstream.rs
crates/lab/src/output/: render.rs
crates/lab/src/process/: unix.rs  windows.rs
crates/lab/tests/: acp_backend_contract.rs  acp_docker_provider_config.rs  api_fs_headers.rs  architecture_boundaries.rs  architecture_orchestrator.rs  auth_admin_api.rs  code_mode_runner.rs  deploy_dispatch.rs  deploy_runner.rs  device_api.rs  device_cli.rs  device_config.rs  device_identity.rs  device_master_only.rs  device_queue.rs  device_runtime.rs  device_scan.rs  gateway_schema_resources.rs  gateway_stdio_spawn.rs  logs_api.rs  logs_cli.rs  logs_dispatch.rs  node_config.rs  node_queue.rs  nodes_api.rs  nodes_cli.rs  nodes_master_only.rs  nodes_runtime.rs  observability.rs  upstream_oauth.rs  windows_job_object_reaping.rs
crates/labby/: CLAUDE.md  Cargo.toml
crates/labby-gateway/: Cargo.toml
crates/labby-gateway/src/: dispatch_helpers.rs  gateway.rs  lib.rs  net.rs  security.rs  test_support.rs  upstream.rs
crates/labby-primitives/: Cargo.toml
crates/labby-primitives/src/: lib.rs  plugin.rs  plugin_ui.rs  ssrf.rs
crates/labby-runtime/: Cargo.toml
crates/labby-runtime/src/: dispatch_helpers.rs  error.rs  gateway_config.rs  helpers.rs  lib.rs  path_safety.rs  redact.rs  security.rs
crates/labby-web/: Cargo.toml  build.rs
crates/labby-web/src/: assets.rs  fs_assets.rs  lib.rs  response.rs
crates/labby-winjob/: Cargo.toml
crates/labby-winjob/src/: lib.rs
crates/labby/examples/: spike_rmcp_auth_client.rs
crates/labby/src/: CLAUDE.md  acp.rs  api.rs  catalog.rs  cli.rs  config.rs  dispatch.rs  docs.rs  lib.rs  main.rs  node.rs  oauth.rs  observability.rs  output.rs  registry.rs  test_support.rs
crates/labby/tests/: acp_backend_contract.rs  acp_docker_provider_config.rs  architecture_boundaries.rs  architecture_orchestrator.rs  auth_admin_api.rs  ci_changed_paths.rs  code_mode_runner.rs  deploy_runner.rs  device_api.rs  device_cli.rs  device_master_only.rs  device_queue.rs  device_runtime.rs  device_scan.rs  gateway_stdio_spawn.rs  logs_cli.rs  node_queue.rs  nodes_api.rs  nodes_cli.rs  nodes_master_only.rs  nodes_runtime.rs  observability.rs  upstream_oauth.rs  windows_job_object_reaping.rs
(+1778 files in other folders)
