[workspace]
resolver = "3"
members = ["crates/lab-apis", "crates/lab", "crates/lab-auth"]

# TEMP patch: vendored agent-client-protocol with `models` preserved on
# ActiveSession. Upstream 0.11.1 strips models in attach_session(), losing
# the model list returned by codex-acp. Drop this patch when upstream fixes
# https://github.com/agentclientprotocol/agent-client-protocol/issues/<TBD>.
[patch.crates-io]
agent-client-protocol = { path = "crates/vendor/agent-client-protocol" }

[workspace.package]
version = "0.15.2"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmagar/lab"
authors = ["jmagar"]

[workspace.dependencies]
# runtime
tokio = { version = "1.52", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "fs",
  "io-util",
  "io-std",
  "time",
  "net",
] }
futures = "0.3"
tempfile = "3.27"

# http / serde / errors
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
  "gzip",
  "stream",
  "form",
  "multipart",
] }
base64 = "0.22"
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# time
jiff = { version = "0.2", features = ["serde"] }

# ui / formatting
console = "0.16"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "fmt",
] }

# cli / output
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tabled = "0.20"
owo-colors = "4"
is-terminal = "0.4"
indicatif = "0.18"
dialoguer = { version = "0.12", default-features = false }

# config
dotenvy = "0.15"
toml = "1.1"

# tui
ratatui = "0.30.0"
crossterm = "0.29"

# mcp
rmcp = { version = "1.6", features = [
  "server",
  "macros",
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-server",
  "client",
  "auth",
  "transport-streamable-http-client-reqwest",
  "elicitation",
  "schemars",
] }

# oauth / jwt
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rsa = "0.10.0-rc.16"
rand = "0.10"
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.11"
hmac = "0.13"
percent-encoding = "2.3"
uuid = { version = "1", features = ["v4", "serde"] }

# http server (lab binary only)
axum = { version = "0.8", features = [
  "macros",
  "json",
  "tokio",
  "http2",
  "ws",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "compression-gzip",
  "timeout",
  "request-id",
  "set-header",
] }

# openapi / docs
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# extract (always compiled — synthetic service)
russh = "0.60.2"
russh-sftp = "2.1.2"
russh-config = "0.58.0"
quick-xml = { version = "0.39.3", features = ["serialize"] }

# tests
wiremock = "0.6"
insta = { version = "1", features = ["json", "yaml"] }

[workspace.lints.rust]
# TODO(docs-pass): re-enable once every service has real types + docstrings.
# Tracked in docs/superpowers/plans/ (follow-up after all 21 services land).
missing_docs = "allow"
unsafe_code = "forbid"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
let_underscore_drop = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "allow"
expect_used = "allow"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stderr = "allow"
mod_module_files = "deny"                    # forbid mod.rs — enforce foo.rs sibling to foo/ style
disallowed_macros = "deny"                   # see /clippy.toml — bans `#[async_trait]` in our code

# allow some pedantic noise
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
# TODO(stubs): re-enable once every service's real impl calls self.http — these
# fire on stub method bodies that will become async the moment the HTTP call lands.
unused_async = "allow"

# TODO(lint-pass): pre-existing warnings promoted to errors by RUSTFLAGS=-D warnings
# in CI. Allow for now; fix incrementally in follow-up PRs.
future_not_send = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
redundant_closure_for_method_calls = "allow"
collapsible_if = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
cast_possible_truncation = "allow"
map_unwrap_or = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
items_after_statements = "allow"
too_long_first_doc_paragraph = "allow"
match_same_arms = "allow"
needless_question_mark = "allow"
default_trait_access = "allow"
cast_possible_wrap = "allow"
redundant_clone = "allow"
option_option = "allow"
cast_lossless = "allow"
manual_let_else = "allow"
needless_borrow = "allow"
unused_self = "allow"
implicit_clone = "allow"
use_self = "allow"
assigning_clones = "allow"
ignored_unit_patterns = "allow"
type_complexity = "allow"
single_match_else = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
cast_sign_loss = "allow"
redundant_closure = "allow"
similar_names = "allow"
double_must_use = "allow"
implicit_hasher = "allow"
or_fun_call = "allow"
doc_lazy_continuation = "allow"
format_push_string = "allow"
from_iter_instead_of_collect = "allow"
suboptimal_flops = "allow"
semicolon_if_nothing_returned = "allow"
single_match = "allow"
significant_drop_in_scrutinee = "allow"
trivially_copy_pass_by_ref = "allow"
print_stdout = "allow"
needless_return = "allow"
manual_contains = "allow"
format_collect = "allow"
explicit_into_iter_loop = "allow"
needless_match = "allow"
match_wildcard_for_single_variants = "allow"
case_sensitive_file_extension_comparisons = "allow"
let_and_return = "allow"
used_underscore_binding = "allow"
unnecessary_semicolon = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
needless_continue = "allow"
manual_clamp = "allow"
needless_collect = "allow"
large_stack_arrays = "allow"
wildcard_imports = "allow"
question_mark = "allow"
cloned_ref_to_slice_refs = "allow"
needless_lifetimes = "allow"
derive_partial_eq_without_eq = "allow"
iter_with_drain = "allow"
filter_map_bool_then = "allow"
if_not_else = "allow"
set_contains_or_insert = "allow"
ref_option = "allow"
nonminimal_bool = "allow"
needless_pass_by_ref_mut = "allow"
struct_field_names = "allow"
large_futures = "allow"
redundant_pub_crate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"

[profile.controller-deploy]
inherits = "release"
lto = "off"
codegen-units = 16
incremental = false

[profile.node-deploy]
inherits = "release"
lto = "off"
codegen-units = 16
incremental = false
