[package]
name = "lab-auth"
description = "Parameterizable OAuth 2.0 + JWT auth crate (axum) for lab and other consumers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["oauth", "auth", "axum", "jwt", "mcp"]
categories = ["authentication", "web-programming::http-server"]
publish = false

[features]
# Explicit empty default to keep Cargo feature unification a no-op for downstream consumers.
default = []

[dependencies]
axum.workspace = true
base64.workspace = true
getrandom = "0.4"
httpdate = "1"
jsonwebtoken.workspace = true
reqwest.workspace = true
rsa.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chacha20poly1305 = "0.10"
sha2.workspace = true
subtle = "2"
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile = "3.27"
tracing-subscriber.workspace = true
wiremock.workspace = true

[lints]
workspace = true
