[package]
name = "lab-codemode"
description = "Client-neutral Code Mode JavaScript execution kernel (Javy/QuickJS sandbox runner, broker, result shaping, and snippet engine) injected with a tool source via the CodeModeHost trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["homelab", "mcp", "sandbox", "javascript", "codemode"]
categories = ["development-tools"]
publish = false

[dependencies]
lab-runtime = { path = "../lab-runtime" }

tokio = { workspace = true, features = ["process"] }
futures.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
tracing.workspace = true

tempfile = "3.27"
ulid = "1"
sha2 = "0.11"
hex = "0.4"
regex = "1"
tokio-util = { version = "0.7", features = ["codec"] }

# QuickJS/Javy sandbox runtime (runner subprocess only). `anyhow` is required
# ONLY at the javy FFI boundary (`javy::to_js_error` takes `anyhow::Error`); it
# is not the crate's error-handling idiom — that is `ToolError`/`thiserror`.
javy = { version = "7.0.0" }
anyhow = "1"

# JavaScript AST normalization (export-shape detection in normalize.rs).
boa_ast = "0.21.1"
boa_interner = "0.21.1"
boa_parser = "0.21.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = [
  "signal",
  "process",
] }

[target.'cfg(windows)'.dependencies]
# Windows Job Object process-tree reaping. The raw FFI lives in `lab-winjob`
# (the sanctioned unsafe crate), so `lab-codemode` stays unsafe-free under the
# workspace `unsafe_code = "forbid"` lint.
lab-winjob = { path = "../lab-winjob" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
