[package]
name = "lab-gateway"
description = "Standalone gateway runtime: upstream MCP proxy pool, connection management, and circuit breaking."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["homelab", "mcp", "gateway", "proxy", "upstream"]
categories = ["development-tools"]
publish = false

[features]
# Exposes the pool's `*_for_tests` inspection helpers as part of the public API
# so downstream crates (notably `lab`'s gateway integration tests) can drive the
# pool. Off by default; enabled only from dev/test builds.
testkit = []

[dependencies]
lab-apis = { path = "../lab-apis", default-features = false }
lab-runtime = { path = "../lab-runtime" }
lab-auth = { path = "../lab-auth", features = ["upstream-oauth-rmcp"] }
tokio = { workspace = true, features = ["process"] }
tokio-util = { version = "0.7", features = ["rt", "compat", "codec"] }
futures.workspace = true
reqwest.workspace = true
rmcp = { workspace = true }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tempfile.workspace = true
url.workspace = true
dotenvy = "0.15"
fd-lock = "4"
process-wrap = { version = "9.1.0", default-features = false, features = [
  "tokio1",
  "process-group",
] }
nix = { version = "0.31", default-features = false, features = [
  "signal",
  "process",
] }
bytes = "1"
sse-stream = "0.2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
dashmap = "6"
arc-swap = "1"
strip-ansi-escapes = "0.2"

[target.'cfg(windows)'.dependencies]
lab-winjob = { path = "../lab-winjob" }

[dev-dependencies]
wiremock.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["process", "test-util"] }
proptest = "1"

[lints]
workspace = true
