[package]
name = "lab-runtime"
description = "Internal Lab runtime contracts and surface-neutral helpers shared by the gateway-extraction crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["homelab", "mcp", "gateway", "runtime"]
categories = ["development-tools"]
publish = false

[dependencies]
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jiff.workspace = true
lab-apis = { path = "../lab-apis", default-features = false }

[features]
marketplace = ["lab-apis/mcpregistry"]
acp_registry = ["lab-apis/acp_registry"]
deploy = ["lab-apis/deploy"]

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true

[lints]
workspace = true
