[package]
name = "labby"
description = "Pluggable homelab CLI + MCP server. One binary, runtime service selection."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["homelab", "mcp", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "labby"
path = "src/main.rs"
test = false

[dependencies]
lab-apis = { path = "../lab-apis", default-features = false }
lab-auth = { path = "../lab-auth" }

tokio = { workspace = true, features = ["process"] }
process-wrap = { version = "9.1.0", default-features = false, features = [
  "tokio1",
  "process-group",
] }
nix = { version = "0.31", default-features = false, features = [
  "signal",
  "process",
] }
sysinfo = { version = "0.38", default-features = false, features = [
  "system",
  "disk",
  "network",
] }
futures.workspace = true
reqwest.workspace = true
url.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
anyhow.workspace = true
thiserror.workspace = true
jiff.workspace = true
boa_ast = "0.21.1"
boa_interner = "0.21.1"
boa_parser = "0.21.1"
javy = { version = "7.0.0", optional = true }
wasmtime = { version = "44.0.1", optional = true, default-features = false, features = [
  "cranelift",
  "pooling-allocator",
  "runtime",
  "wat",
] }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

clap.workspace = true
clap_complete.workspace = true
owo-colors.workspace = true
is-terminal.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
console.workspace = true

dotenvy.workspace = true
toml.workspace = true
dirs = "5"


base64.workspace = true
fd-lock = "4"
fs4 = "1"
tempfile = "3.27"
subtle = "2"
indexmap = { version = "2", features = ["serde"] }
secrecy = "0.10"
sha2 = "0.11"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hmac.workspace = true
chacha20poly1305 = "0.10"
dashmap = "6"
lru = "0.16"
diffy-imara = "0.3"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt", "compat"] }
strip-ansi-escapes = "0.2"
agent-client-protocol = { version = "=0.13.1", features = ["unstable"] }

hex = "0.4"
ulid = "1"
num_cpus = "1"

# optional — deploy feature
regex = { version = "1" }

rmcp.workspace = true
# Transport-layer body-cap wrapper (dispatch/upstream/http_client.rs) uses
# bytes::Bytes and sse-stream::SseStream directly. `http` types come in via
# reqwest::header (already a direct dep).
bytes = "1"
sse-stream = "0.2"
jsonwebtoken.workspace = true
rusqlite.workspace = true
r2d2 = "0.8"
r2d2_sqlite = "0.33"
uuid.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true

oauth2 = { version = "5.0", default-features = false }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# optional — fs feature (workspace filesystem browser)
walkdir = { version = "2", optional = true }
globset = { version = "0.4", optional = true }
unicode-normalization = { version = "0.1", optional = true }
rustix = { version = "1", features = ["fs"], optional = true }
toml_edit = "0.23"

[target.'cfg(unix)'.dependencies]
sd-notify = { version = "0.5", optional = true }

[dev-dependencies]
wiremock.workspace = true
proptest = "1"

[lib]
path = "src/lib.rs"

[features]
acp_registry = ["lab-apis/acp_registry"]
node-runtime = []
all = ["lab-apis/all", "lab-admin", "acp_registry", "deploy", "mcpregistry", "gateway", "marketplace"]
gateway = ["dep:javy", "dep:wasmtime"]
marketplace = ["mcpregistry"]
services-all = [
]
default = ["all"]
deploy = ["lab-apis/deploy"]
fs = ["dep:walkdir", "dep:globset", "dep:unicode-normalization", "dep:rustix"]
lab-admin = []
mcpregistry = ["lab-apis/mcpregistry"]
systemd = ["dep:sd-notify"]
test-utils = []
[lints]
workspace = true
