[package]
name = "labby"
description = "Pluggable homelab CLI + MCP server. One binary, runtime service selection."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["homelab", "mcp", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "labby"
path = "src/main.rs"
test = false

[dependencies]
lab-apis = { path = "../lab-apis", default-features = false }
lab-auth = { path = "../lab-auth", features = ["upstream-oauth-rmcp"] }
lab-runtime = { path = "../lab-runtime" }
lab-gateway-web = { path = "../lab-gateway-web" }

tokio = { workspace = true, features = ["process"] }
process-wrap = { version = "9.1.0", default-features = false, features = [
  "tokio1",
  "process-group",
] }
nix = { version = "0.31", default-features = false, features = [
  "signal",
  "process",
] }
sysinfo = { version = "0.38", default-features = false, features = [
  "system",
  "disk",
  "network",
] }
futures.workspace = true
reqwest.workspace = true
url.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
anyhow.workspace = true
thiserror.workspace = true
jiff.workspace = true
boa_ast = "0.21.1"
boa_interner = "0.21.1"
boa_parser = "0.21.1"
javy = { version = "7.0.0", optional = true }
wasmtime = { version = "44.0.1", optional = true, default-features = false, features = [
  "cranelift",
  "pooling-allocator",
  "runtime",
  "wat",
] }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true

dotenvy.workspace = true
toml.workspace = true
dirs = "5"


base64.workspace = true
fd-lock = "4"
tempfile = "3.27"
subtle = "2"
sha2 = "0.11"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hmac.workspace = true
chacha20poly1305 = "0.10"
dashmap = "6"
diffy-imara = "0.3"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt", "compat", "codec"] }
strip-ansi-escapes = "0.2"
agent-client-protocol = { version = "=0.13.1", features = ["unstable"] }

hex = "0.4"
getrandom = "0.4"
ulid = "1"

# optional — deploy feature
regex = { version = "1" }

rmcp.workspace = true
# Transport-layer body-cap wrapper (dispatch/upstream/http_client.rs) uses
# bytes::Bytes and sse-stream::SseStream directly. `http` types come in via
# reqwest::header (already a direct dep).
bytes = "1"
sse-stream = "0.2"
rusqlite.workspace = true
r2d2 = "0.8"
r2d2_sqlite = "0.33"
uuid.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true

oauth2 = { version = "5.0", default-features = false }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# optional — fs feature (workspace filesystem browser)
walkdir = { version = "2", optional = true }
globset = { version = "0.4", optional = true }
unicode-normalization = { version = "0.1", optional = true }
rustix = { version = "1", features = ["fs"], optional = true }
toml_edit = "0.23"

[target.'cfg(unix)'.dependencies]
sd-notify = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
# Windows Job Object process-tree reaping. The raw `windows-sys` FFI lives in
# `lab-winjob` (the sanctioned unsafe crate), so `lab` stays unsafe-free and
# keeps the workspace `unsafe_code = "forbid"` lint. This mirrors how the Unix
# path routes its unsafe through the external `nix` crate.
lab-winjob = { path = "../lab-winjob" }

[dev-dependencies]
# Enable lab-auth's test-only seams (e.g. `OauthClientCache::insert_for_tests`)
# for `lab`'s test build only — never compiled into the production binary.
lab-auth = { path = "../lab-auth", features = ["upstream-oauth-rmcp", "test"] }
wiremock.workspace = true
proptest = "1"

[lib]
path = "src/lib.rs"

# Feature-slice contract:
# - `default` keeps the production all-features binary.
# - `all` is the authoritative development and release build.
# - Product slices must compile with `--no-default-features --features <slice> --all-targets`.
# - Supported standalone product slices are: gateway, marketplace, fs, deploy, acp_registry.
# - `mcpregistry` is owned by marketplace in this crate; do not treat it as standalone here.
# - `doctor`, `setup`, `serve` base, `nodes`, `logs`, `stash`, and `acp` are base control-plane
#   or UI-coupled capabilities, not standalone slices in this feature table.
# - Helper/internal features are not standalone product slices unless this comment is updated.
[features]
acp_registry = ["lab-apis/acp_registry", "lab-runtime/acp_registry"]
node-runtime = []
all = ["lab-apis/all", "lab-admin", "acp_registry", "deploy", "gateway", "marketplace"]
gateway = ["dep:javy", "dep:wasmtime"]
marketplace = ["lab-apis/mcpregistry", "lab-runtime/marketplace"]
services-all = [
]
default = ["all"]
deploy = ["lab-apis/deploy", "lab-runtime/deploy"]
fs = ["dep:walkdir", "dep:globset", "dep:unicode-normalization", "dep:rustix"]
lab-admin = []
mcpregistry = ["marketplace"]
systemd = ["dep:sd-notify"]
test-utils = []
[lints]
workspace = true
