[package]
name = "labby-runtime"
description = "Internal Lab runtime contracts and surface-neutral helpers shared by the gateway-extraction crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["homelab", "mcp", "gateway", "runtime"]
categories = ["development-tools"]
publish = false

[dependencies]
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jiff.workspace = true
# Optional: only pulled in by the mcpregistry/acp_registry/deploy error
# conversions below, each gated behind its matching feature. The default
# build (what labby-gateway, labby-auth, and labby-codemode all use) never
# depends on labby-apis.
labby-apis = { path = "../labby-apis", default-features = false, optional = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing.workspace = true

[features]
marketplace = ["dep:labby-apis", "labby-apis/mcpregistry"]
acp_registry = ["dep:labby-apis", "labby-apis/acp_registry"]
deploy = ["dep:labby-apis", "labby-apis/deploy"]

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
