[package]
name = "labby-web"
description = "Gateway admin static asset embedding, resolution, and content-type/cache header helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["web", "assets", "spa", "gateway", "static"]
categories = ["web-programming", "caching"]
publish = false
build = "build.rs"

[features]
# Explicit empty default to keep Cargo feature unification a no-op for downstream consumers.
default = []

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.27"
tokio = { workspace = true, features = ["fs", "macros", "rt"] }

[lints]
workspace = true
